objects/Entitlement.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <description>To be used by Trigger to tag entitlement record on Case</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aircraft Interior</fullName>
                </value>
                <value>
                    <fullName>Ancillary Revenue</fullName>
                </value>
                <value>
                    <fullName>Atom IVR</fullName>
                </value>
                <value>
                    <fullName>Bad Landing</fullName>
                </value>
                <value>
                    <fullName>Cargo Services</fullName>
                </value>
                <value>
                    <fullName>CAR- Online Bank Transfer</fullName>
                </value>
                <value>
                    <fullName>Catering - Meal Quality</fullName>
                </value>
                <value>
                    <fullName>Catering - Meal Quantity</fullName>
                </value>
                <value>
                    <fullName>Catering Service Complaints</fullName>
                </value>
                <value>
                    <fullName>Compensation - Baggage Mishandling</fullName>
                </value>
                <value>
                    <fullName>Compensation - Flight Cancellation</fullName>
                </value>
                <value>
                    <fullName>Compensation - NEGBAL</fullName>
                </value>
                <value>
                    <fullName>Contents Damaged-Domestic</fullName>
                </value>
                <value>
                    <fullName>Contents Damaged-International</fullName>
                </value>
                <value>
                    <fullName>Denied Boarding</fullName>
                </value>
                <value>
                    <fullName>Flight Cancellation - Controllable</fullName>
                </value>
                <value>
                    <fullName>Flight Cancellation - Uncontrollable</fullName>
                </value>
                <value>
                    <fullName>Flight Delay - Controllable</fullName>
                </value>
                <value>
                    <fullName>Flight Delay - Uncontrollable</fullName>
                </value>
                <value>
                    <fullName>Flight Schedule Change</fullName>
                </value>
                <value>
                    <fullName>Internet Error</fullName>
                </value>
                <value>
                    <fullName>IROP - No Information</fullName>
                </value>
                <value>
                    <fullName>Itineraries Not Received</fullName>
                </value>
                <value>
                    <fullName>Legal Notice</fullName>
                </value>
                <value>
                    <fullName>Lost &amp; Found-Domestic</fullName>
                </value>
                <value>
                    <fullName>Lost &amp; Found-International</fullName>
                </value>
                <value>
                    <fullName>Lost-Domestic</fullName>
                </value>
                <value>
                    <fullName>Lost-International</fullName>
                </value>
                <value>
                    <fullName>Mishandled</fullName>
                </value>
                <value>
                    <fullName>Misinformation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>To be used by Trigger to tag entitlement record on Case</description>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airport Services</fullName>
                </value>
                <value>
                    <fullName>Ancillary</fullName>
                </value>
                <value>
                    <fullName>Cargo</fullName>
                </value>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>Customer Experience</fullName>
                </value>
                <value>
                    <fullName>Engineering/ MCC</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Flight Ops</fullName>
                </value>
                <value>
                    <fullName>FSC</fullName>
                </value>
                <value>
                    <fullName>Groupdesk</fullName>
                </value>
                <value>
                    <fullName>In- Flight</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing/ Products</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Reservations</fullName>
                </value>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>This field will be used to create key for entitlement record which will be used in Trigger to stamp entitlement record on case.The key will be created by WF rule</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <description>To be used by Trigger to tag entitlement record on Case</description>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Baggage Interchange</fullName>
                </value>
                <value>
                    <fullName>Booking Error</fullName>
                </value>
                <value>
                    <fullName>Carry on Item - Lost</fullName>
                </value>
                <value>
                    <fullName>Carry on Item - Lost &amp; Found</fullName>
                </value>
                <value>
                    <fullName>Carry-on - Mishandling - SRA Item</fullName>
                </value>
                <value>
                    <fullName>Compensation Claimed</fullName>
                </value>
                <value>
                    <fullName>Compliment</fullName>
                </value>
                <value>
                    <fullName>Compliment - Medical Assistance</fullName>
                </value>
                <value>
                    <fullName>Duplicate Bookings</fullName>
                </value>
                <value>
                    <fullName>Duplicate Complaint</fullName>
                </value>
                <value>
                    <fullName>Gate No-Show</fullName>
                </value>
                <value>
                    <fullName>Guest Error</fullName>
                </value>
                <value>
                    <fullName>Internet Booking</fullName>
                </value>
                <value>
                    <fullName>Invalid Complaint</fullName>
                </value>
                <value>
                    <fullName>LOPA - Voucher</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Mis-Information</fullName>
                </value>
                <value>
                    <fullName>Misuse - Credit Card/Credit Shell/Voucher</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Other complaints</fullName>
                </value>
                <value>
                    <fullName>Refund Claimed</fullName>
                </value>
                <value>
                    <fullName>Service Complaint</fullName>
                </value>
                <value>
                    <fullName>Special Request - Humanitarian Grounds</fullName>
                </value>
                <value>
                    <fullName>Stretcher / Oxygen Request</fullName>
                </value>
                <value>
                    <fullName>Suggestions/Feedbacks</fullName>
                </value>
                <value>
                    <fullName>Travel Certificate Request</fullName>
                </value>
                <value>
                    <fullName>Voucher - Service Recovery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Department__c</fullName>
        <label>Sub-Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Cases</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Travel Portals/Travel Agents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Entitlements</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>SLA.NAME</columns>
        <columns>External_Id__c</columns>
        <columns>Department__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Department__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.STATUS</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Entitlements</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>